<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.hp.cleaners.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262">


            <TextView
                android:id="@+id/homeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:baselineAligned="false"
                android:text="@string/homeText" />

            <Spinner
                android:id="@+id/facilitySelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:dropDownWidth="match_parent"
                android:text="@string/selectfacility" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/facilitySize"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:ems="10"
                    android:hint="@string/facilitySize"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/unitSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:dropDownWidth="match_parent"
                    android:text="@string/selectunit" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/clean_pest"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cleanRB" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/pestRB" />

            </RadioGroup>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/sendButton"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
