<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Aboutctivity"
    tools:showIn="@layout/activity_aboutctivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/HomeCleaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:ems="10"
                android:inputType="text"
                android:text="@string/homeCleaning"
                android:textColor="#ffffff"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="139dp" />

            <TextView
                android:id="@+id/HomeCleaningTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom|left|right|fill_vertical|fill|start|end"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="fill|start|end"
                android:inputType=""
                android:text="@string/homeCleaningTxt"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/fullHomeDeepclean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:inputType=""
                android:text="@string/fullHomeDeepclean"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullHomeDeepcleanTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom|left|right|fill|start|end"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="fill"
                android:inputType=""
                android:text="@string/fullHomeDeepcleanTxt"
                android:textAlignment="viewStart"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/skipAbt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:onClick="skipAbt"
                    android:text="@string/skipAbt"
                    android:textAlignment="center"
                    android:textColor="#ffffff" />

                <!--<ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="nextAbt"
                    app:srcCompat="@android:drawable/ic_media_next" />-->


                <TextView
                    android:id="@+id/nxtAbt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:onClick="nextAbt"
                    android:text="@string/nxtAbt"
                    android:textAlignment="center"
                    android:textColor="#ffffff" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>